# Redberry

./: .gitignore  Augmentation_plan.md  Cargo.toml  README.md  bert_optimization_research.md  bge_test_results.txt  config.example.toml  implementation_planv3.md  nextgen_bert_architectures.md  out.txt  poc_cli_oom.py  test_10.sh  test_browser.js  test_results.txt  time_trace.txt
crates/redberry-analyze/: Cargo.toml
crates/redberry-analyze/src/: decompose.rs  lib.rs  syntax.rs  vagueness.rs
crates/redberry-cli/: Cargo.toml
crates/redberry-cli/src/: main.rs
crates/redberry-core/: Cargo.toml
crates/redberry-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/redberry-embed/: Cargo.toml
crates/redberry-embed/src/: cache.rs  engine.rs  lib.rs  setup.rs
crates/redberry-persona/: Cargo.toml
crates/redberry-persona/assets/: templates.toml
crates/redberry-persona/src/: calibration.rs  lib.rs  personality.rs  templates.rs
crates/redberry-pipeline/: Cargo.toml
crates/redberry-pipeline/src/: lib.rs
crates/redberry-server/: Cargo.toml
crates/redberry-server/src/: main.rs
crates/redberry-ui/: Cargo.toml  index.html
crates/redberry-ui/dashboard/: index.html  package-lock.json  package.json  vite.config.js
crates/redberry-ui/dashboard/src/: App.jsx  index.css
crates/redberry-ui/src/: main.rs
