[package]
name = "redberry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone CLI for testing Redberry outside of MCP"

[[bin]]
name = "redberry"
path = "src/main.rs"

[dependencies]
redberry-core = { workspace = true }
redberry-analyze = { workspace = true }
redberry-embed = { workspace = true }
redberry-persona = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
redberry-pipeline = { version = "0.1.0", path = "../redberry-pipeline" }
