[package]
name = "redberry-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust ONNX embedding engine with context caching for Redberry"

[dependencies]
redberry-core = { workspace = true }
tract-onnx = { workspace = true }
ndarray = { workspace = true }
tokenizers = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
