[package]
name = "redberry-persona"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Personality engine and snark generation for Redberry"

[dependencies]
redberry-core = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
