[package]
name = "redberry-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
axum = "0.8.9"
redberry-core = { version = "0.1.0", path = "../redberry-core" }
redberry-embed = { version = "0.1.0", path = "../redberry-embed" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
